@@ -1559,6 +1559,7 @@ void cmd_for_in(bcip_t true_ip, bcip_t false_ip, var_p_t var_p) {
   node.x.vfor.var_ptr = var_p;
   node.x.vfor.to_expr_ip = prog_ip;
   node.x.vfor.flags = 0;
+  node.x.vfor.str_ptr = NULL;
 
   if (code_isvar()) {
     // array variable
@@ -1575,6 +1576,7 @@ void cmd_for_in(bcip_t true_ip, bcip_t false_ip, var_p_t var_p) {
     switch (new_var->type) {
     case V_MAP:
     case V_ARRAY:
+    case V_STR:
       break;
 
     default:
@@ -1603,6 +1605,13 @@ void cmd_for_in(bcip_t true_ip, bcip_t false_ip, var_p_t var_p) {
       if (v_asize(array_p) > 0) {
         var_elem_ptr = v_elem(array_p, 0);
       }
+      break;
+
+    case V_STR:
+      var_elem_ptr = node.x.vfor.str_ptr = v_new();
+      v_init_str(var_elem_ptr, 1);
+      var_elem_ptr->v.p.ptr[0] = array_p->v.p.ptr[0];
+      var_elem_ptr->v.p.ptr[1] = '\0';
       break;
 
     default:
@@ -1798,6 +1807,20 @@ void cmd_until() {
 }
 
 //
+// FOR chr in str
+//
+var_t *cmd_next_for_in_str(stknode_t *node) {
+  var_t *result = NULL;
+  var_t *array_p = node->x.vfor.arr_ptr;
+  int index = ++node->x.vfor.step_expr_ip;
+  if (index < v_strlen(array_p)) {
+    result = node->x.vfor.str_ptr;
+    result->v.p.ptr[0] = array_p->v.p.ptr[index];
+  }
+  return result;
+}
+
+//
 // FOR [EACH] v1 IN v2
 //
 void cmd_next_for_in(stknode_t *node, bcip_t next_ip) {
@@ -1808,6 +1831,10 @@ void cmd_next_for_in(stknode_t *node, bcip_t next_ip) {
   var_t *var_p = node->x.vfor.var_ptr;
 
   switch (array_p->type) {
+  case V_STR:
+    var_elem_ptr = cmd_next_for_in_str(node);
+    break;
+
   case V_MAP:
     var_elem_ptr = map_elem_key(array_p, ++node->x.vfor.step_expr_ip);
     break;
@@ -1833,6 +1860,11 @@ void cmd_next_for_in(stknode_t *node, bcip_t next_ip) {
       // allocated in for
       v_free(node->x.vfor.arr_ptr);
       v_detach(node->x.vfor.arr_ptr);
+    }
+    if (node->x.vfor.str_ptr) {
+      v_free(node->x.vfor.str_ptr);
+      v_detach(node->x.vfor.str_ptr);
+      node->x.vfor.str_ptr = NULL;
     }
     code_jump(next_ip);
   }
