@@ -5,7 +5,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.3.1'
+    classpath 'com.android.tools.build:gradle:3.3.2'
     classpath "com.github.ben-manes:gradle-versions-plugin:0.20.0"
   }
 }
