@@ -1,4 +1,7 @@
 2019-03-02 (0.12.15)
+	COMMON: Implemented - FOR character IN string
+
+2019-03-02 (0.12.15)
 	ANDROID: In editor, hide status when scrolled
 
 2019-02-26 (0.12.15)
